# example-dunolint-autoload

./: .gitignore  README.md  dune  dune-project  dune-workspace  dunolint  test.expected  test.sh
lib/: dune  root_lib.ml
repo/bar/: dune-project  dunolint
repo/bar/lib/: bar_lib.ml  dune
repo/foo/: dune-project  dunolint
repo/foo/lib/: dune  wrong_name.ml
